--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dilo_express",
   "version": "1.0.0",
   "description": "v1_app_dilo_express",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,16 @@
   },
   "homepage": "https://github.com/truggn/dilo_express#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
+    "http-errors": "^2.0.0",
+    "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.16",
+    "otp-generator": "^4.0.0",
+    "response-time": "^2.3.2"
   }
 }
